--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-testas
+<!--TOP INFO SECTION WITH PHONES AND LOGO-->
+<header class="mb-3">
+    <div class="container d-flex justify-content-center align-items-center">
+        <a href="app/views/home.html"><img src="assets/images/logo.png" alt="logo"></a>
+        <ul class="row justify-content-center align-items-center mr-3">
+            <li>CALL US: + 1 800-567-8990</li>
+            <li>WRITE US: OFFICE@EXAMPLE.COM</li>
+            <li>OPENING TIMES: MON - FRI: 9:00 - 19:00</li>
+        </ul>
+        <a class="join" href="#" class="primary-btn">JOIN US</a>
+       </div>
+</header>
+<!--NAVIGATION BAR-->
+<section class="homeFirst">
+    <div class="container">
+    <nav class=" pt-2">
+        <a class="p-3" href="app/views/home.html">Home</a>
+        <a class="p-3" href="app/views/about.html">About</a>
+        <a class="p-3" href="app/views/classes.html">Classes</a>
+        <a class="p-3" href="app/views/pages.html">Pages</a>
+        <a class="p-3" href="app/views/blog.html">Blog</a>
+        <a class="p-3" href="app/views/contact.html">Contact</a>
+    </nav>
+    </div>
+
+    <!--CAROUSEL-->    
+        <div id="carouselExampleInterval" class="carousel slide d-flex justify-content-center align-items-center karusele text-white" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="10000">
+                  <div class="container">
+                <div class="row">
+                    <div class="text-left w-50 carousel-text ">
+                        <span>Welcome to Zogin</span>
+                        <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
+                        <a class="p-3" href="#">DISCOVER ME</a>
+                    </div>
+                    <div>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="2000">
+                  <div class="row">
+                    <div class="text-left w-50 carousel-text">
+                        <span>Welcome to Zogin</span>
+                        <h2>What hurts today makes you stronger tomorrow</h2>
+                        <a class="p-3" href="#">DISCOVER ME</a>
+                    </div>
+                    <div>
+                </div>
+              </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <!--END OF CAROUSEL-->
+    
+</section>
+<!--SECTION #1 START-->
+<section class="first">
+    <div class="container">
+        <div class="row">
+            <!--right column-->
+            <div>
+                
+            </div>
+            <!--left column-->
+            <div></div>
+        </div>
+    </div>
+</section>
+
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
 </body>
