--- a/index.html
+++ b/index.html
@@ -74,13 +74,35 @@
 <!--SECTION #1 START-->
 <section class="first">
     <div class="container">
-        <div class="row">
+        <div class="d-flex justify-content-between ">
             <!--right column-->
-            <div>
-                
+            <div class="col-6 d-flex">
+                <!--left long picture-->
+                <div class="col-6 m-5">
+                    <img src="assets/images/about-1.png" alt="about-1">
+                </div>
+                <!--right two small pictures-->
+                <div class="col-6">
+                    <img class="mb-2 mt-5" src="assets/images/about-2.png" alt="about-2">
+                    <img class="mt-2" src="assets/images/about-3.png" alt="about-3">
+                </div>
             </div>
             <!--left column-->
-            <div></div>
+            <!--FIX ALIGNMENT OF COLUMNS-->
+            <div class="col-4 mt-5">
+                <div class="column align-items-flex-end">
+                        <img class="mb-3" src="assets/images/rose-32.png" alt="rose-32">
+                        <h2 class="mb-3">Welcome to Zogin</h2>
+                        <span class="mb-3">“What hurts today makes you stronger tomorrow.”</span>
+                        <p class="mt-2">
+                            We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300 hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming experience in The world capital of Yoga in Rishikesh.
+                        </p>
+                        <p class="mb-5">Zogin is a great place for those who are in search of the ancient practice and true essence of yoga, meditation, health, peace and learning the art of creating a class to teach safely. We are passionate about adjustments and mainly focus on the alignment of the asanas.
+
+                        </p>
+                        <a class="first-sec-button" href="#">MORE ABOUT US</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
