--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <a class="p-3" href="app/views/contact.html">Contact</a>
     </nav>
     </div>
-
     <!--CAROUSEL-->    
         <div id="carouselExampleInterval" class="carousel slide d-flex justify-content-center align-items-center karusele text-white" data-ride="carousel">
             <div class="carousel-inner">
@@ -69,7 +68,6 @@
             </a>
           </div>
           <!--END OF CAROUSEL-->
-    
 </section>
 <!--SECTION #1 START-->
 <section class="first">
@@ -98,12 +96,68 @@
                             We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300 hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming experience in The world capital of Yoga in Rishikesh.
                         </p>
                         <p class="mb-5">Zogin is a great place for those who are in search of the ancient practice and true essence of yoga, meditation, health, peace and learning the art of creating a class to teach safely. We are passionate about adjustments and mainly focus on the alignment of the asanas.
-
                         </p>
                         <a class="first-sec-button" href="#">MORE ABOUT US</a>
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<!--SECTION #2-->
+<section class="second">
+    <div class="container">
+        <div class="d-flex-column text-center"> 
+            <img class="mb-3" src="assets/images/rose-32.png" alt="rose-32">
+            <h2 class="mb-3">Enjoy All Aspects Of Yoga</h2>
+        </div>
+        <!--CARDS-->
+        <div>
+            <div class="card-deck">
+                <div class="card">
+                  <img src="assets/images/services-1.png" class="card-img-top" alt="services-1">
+                  <div class="card-body">
+                    <h5 class="card-title">Asana</h5>
+                    <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="assets/images/services-2.png" class="card-img-top" alt="services-2">
+                  <div class="card-body">
+                    <h5 class="card-title">Meditation</h5>
+                    <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="assets/images/services-3.png" class="card-img-top" alt="services-3">
+                  <div class="card-body">
+                    <h5 class="card-title">Mudra</h5>
+                    <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                  </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/services-4.png" class="card-img-top" alt="services-4">
+                    <div class="card-body">
+                      <h5 class="card-title">Bandhas</h5>
+                      <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="assets/images/services-5.png" class="card-img-top" alt="services-5">
+                    <div class="card-body">
+                      <h5 class="card-title">Philosophy</h5>
+                      <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="assets/images/services-6.png" class="card-img-top" alt="services-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Pranayama</h5>
+                      <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                    </div>
+                  </div>
+              </div>
+        </div>
+        <!--END OF CARDS-->
     </div>
 </section>
 
