--- a/index.html
+++ b/index.html
@@ -160,6 +160,55 @@
         <!--END OF CARDS-->
     </div>
 </section>
+<!--SECTION #3-->
+<section class="third">
+    <div class="container d-flex mt-5">
+        <div class="d-flex justify-content-center"></div>
+        <!--left block-->
+        <div class="col-6">
+            <h2>Why Choose Us</h2>
+            <p>We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300 hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming experience in The world capital of Yoga in Rishikesh.</p>
+            <!--div with row #1-->
+            <div class="row justify-content-around mt-5">
+                <div class="row">
+                    <img class="m-2" src="assets/images/choose-1.png" alt="choose-1">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <img class="m-2" src="assets/images/choose-2.png" alt="choose-2">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+            </div>
+            <!--div with row #2-->
+            <div class="row justify-content-around mt-5">
+                <div class="row">
+                    <img class="m-2" src="assets/images/choose-3.png" alt="choose-3">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <img class="m-2" src="assets/images/choose-4.png" alt="choose-4">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--right block with picture-->
+        <div class="col-6">
+            <img src="assets/images/choose-pic.png" alt="choose-pic">
+        </div>
+    </div>
+</section>
 
 
 <script type="text/javascript" src="js/jquery.js"></script>
