Section CLASSES with cards

--- a/index.html
+++ b/index.html
@@ -209,7 +209,54 @@
         </div>
     </div>
 </section>
-
+<!--SECTION #4-->
+<section class="fourth">
+    <div class="container">
+        <div class="d-flex-column text-center justify-content-center">
+            <h2 class="mt-5">Upcoming Courses</h2>
+            <p class="mt-5">The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)
+                and Yin Yoga.</p>
+        </div>
+        <!--CARDS-->
+        <div>
+            <div class="card-deck mt-5">
+                <div class="card">
+                  <img src="assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                  <div class="card-body">
+                    <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+</section>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
