GALLERY SECTION - DONE

--- a/index.html
+++ b/index.html
@@ -257,6 +257,37 @@
         </div>
     </div>
 </section>
+<!--GALLERY SECTION-->
+<section class="gallerySec">
+    <div class="container mt-5">
+        <div class="d-flex-column text-center mt-5">
+            <h2 class="mt-5">Our Gallery</h2>
+            <p class="mt-5">This is the beautiful yogi and yoginis that have shared their journey and growth with
+                us. Take a look!</p>
+        </div>
+    </div>
+    <!--galery-->
+    <div class="container-fluid">
+        <div class="row justify-content-around mt-5 gallery">
+            <div class="col-3 p-0"><img src="assets/images/gallery-1.png" alt="gallery-1"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-2.png" alt="gallery-2"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-3.png" alt="gallery-3"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-4.png" alt="galerry-4"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-5.png" alt="gallery-5"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-6.png" alt="gallery-6"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-7.png" alt="gallery-7"></div>
+            <div class="col-3 p-0"><img src="assets/images/gallery-8.png" alt="gallery-8"></div>
+        </div>
+    </div>
+</section>
+<!--INSTRUCTORS SECTION-->
+<section>
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            
+        </div>
+    </div>
+</section>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
