--- a/index.html
+++ b/index.html
@@ -282,13 +282,69 @@
 </section>
 <!--INSTRUCTORS SECTION-->
 <section>
-    <div class="container">
+    <div class="container mt-5">
+        <div class="d-flex-column justify-content-center text-center">
+            <h2 class="mt-5">Meet Our Instructors</h2>
+            <p class="mt-5">Our Indian and western teachers are highly qualified and will be happy to share this
+                spiritual journey with you.</p>
+        </div>
         <div class="d-flex justify-content-center">
-            
+            <!--CARDS-->
+            <div class="mt-5">
+                <div class="card-deck mt-5 text-center">
+                    <div class="card">
+                      <img src="assets/images/instructor-1.png" class="card-img-top" alt="instructor-1">
+                      <div class="card-body">
+                        <h5 class="card-title">Emma Hale</h5>
+                        <p class="card-text">Yoga Trainer</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="assets/images/instructor-2.png" class="card-img-top" alt="instructor-2">
+                      <div class="card-body">
+                        <h5 class="card-title">Rebecca James</h5>
+                        <p class="card-text">Yoga Trainer</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="assets/images/instructor-3.png" class="card-img-top" alt="instructor-3">
+                      <div class="card-body">
+                        <h5 class="card-title">Melissa Smith</h5>
+                        <p class="card-text">Yoga Trainer</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/instructor-4.png" class="card-img-top" alt="instructor-4">
+                        <div class="card-body">
+                          <h5 class="card-title">Melissa Smith</h5>
+                          <p class="card-text">Yoga Trainer</p>
+                        </div>
+                      </div>
+                  </div>
+            </div>
+            <!--END OF CARDS-->
         </div>
     </div>
 </section>
+<!--FORM SECTION-->
+<section>
+    <div class="container text-center formSec mt-5">
+        <div class="d-flex-column justify-content-center text- center">
+            <img class="mt-5" src="assets/images/rose-32.png" alt="rose-32">
+            <h2 class="mt-5 text-white">Make An Appointment</h2>
+        </div>
+        <div class="d-flex justify-content-center">
+        <div class="row justify-content-center mt-5 col-10">
 
+            <input class="col-6 mb-3 " type="text" name="name" id="name" placeholder="Name">
+            <input class="col-6 mb-3 " type="text" name="email" id="email" placeholder="Email">
+            <input class="col-12 mt-1 mb-3" type="text" name="subject" placeholder="Subject">
+            <textarea class="col-12 mt-1 mb-3" name="textarea" id="textas" cols="30" rows="10"></textarea>
+        </div>
+        </div>
+    </div>
+</section>
+    
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
 </body>
