--- a/index.html
+++ b/index.html
@@ -389,6 +389,76 @@
         </div>
     </div>
 </section>
+<!--FOOTER-->
+<footer>
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="footer__about">
+                        <img src="img/footer-logo.png" alt="">
+                        <ul>
+                            <li><i class="fa fa-clock-o"></i> Mon - Fri: 6:30am - 07:45pm</li>
+                            <li><i class="fa fa-clock-o"></i> Sat - Sun: 8:30am - 05:45pm</li>
+                        </ul>
+                        <form action="#">
+                            <input type="text" placeholder="Your Email">
+                            <button type="submit">Submit</button>
+                        </form>
+                        </div>
+                        </div>
+                        <div class="col-2">
+                            <div>
+                            <h5>Inspiration</h5>
+                                <ul>
+                                    <li><a href="#">Online Pilates</a></li>
+                                    <li><a href="#">Yoga for Beginners</a></li>
+                                    <li><a href="#">Online Pilates</a></li>
+                                    <li><a href="#">Online Yoga</a></li>
+                                    <li><a href="#">Conditioning</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="footer__widget">
+                                <h5>About Us</h5>
+                                <ul>
+                                    <li><a href="#">Our Vision</a></li>
+                                    <li><a href="#">Our Mission</a></li>
+                                    <li><a href="#">Meet The Team</a></li>
+                                    <li><a href="#">Introduce</a></li>
+                                    <li><a href="#">Customer Service</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6">
+                            <div>
+                                <h5>Contact Us</h5>
+                                <ul>
+                                    <li> (01) 436 8888</li>
+                                    <li> hello@zogin.com</li>
+                                    <li> 828 Granville Lights Suite 466</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                        <div class="row">
+                        <div class="col-6">
+                            <div>
+                                <p>Copyright ©2020 All rights reserved | This template is made with  by Colorlib</p>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                        <div>
+                        <!--INSERT SOCIAL MEDIA ICONS-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+</footer>
     
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
