--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
             <div class="row">
                 <div class="col-4">
                     <div class="footer__about">
-                        <img src="img/footer-logo.png" alt="">
+                        <img src="assets/images/footer-logo.png" alt="footer-logo">
                         <ul>
-                            <li><i class="fa fa-clock-o"></i> Mon - Fri: 6:30am - 07:45pm</li>
-                            <li><i class="fa fa-clock-o"></i> Sat - Sun: 8:30am - 05:45pm</li>
+                            <li> Mon - Fri: 6:30am - 07:45pm</li>
+                            <li> Sat - Sun: 8:30am - 05:45pm</li>
                         </ul>
                         <form action="#">
                             <input type="text" placeholder="Your Email">
@@ -420,7 +420,7 @@
                             </div>
                         </div>
                         <div class="col-2">
-                            <div class="footer__widget">
+                            <div>
                                 <h5>About Us</h5>
                                 <ul>
                                     <li><a href="#">Our Vision</a></li>
