about.html done. small fixes needed

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
 </section>
 <!--SECTION #3-->
-<section class="third">
+<section class="third mt-5">
     <div class="container d-flex mt-5">
         <div class="d-flex justify-content-center"></div>
         <!--left block-->
