Top navigation styling fixed

--- a/index.html
+++ b/index.html
@@ -22,23 +22,30 @@
 </header>
 <!--NAVIGATION BAR-->
 <section class="homeFirst">
-    <div class="container">
+    <div class="container d-flex justify-content-around">
     <nav class="row pt-2">
-        <a class="pr-3" href="app/views/home.html">Home</a>
-        <a class="pr-3" href="app/views/about.html">About</a>
-        <a class="pr-3" href="app/views/classes.html">Classes</a>
+        <a class="mr-3 actv" href="app/views/home.html">HOME</a>
+        <a class="mr-3" href="app/views/about.html">ABOUT</a>
+        <a class="mr-3" href="app/views/classes.html">CLASSES</a>
         <div class="dropdown"> 
-        <span><a class="pr-3" href="app/views/pages.html">Pages</a></span>
+        <span><a class="mr-3" href="app/views/pages.html">PAGES</a></span>
          <div class="dropdown-content block">
-             <a class="pr-3" href="#">Classes Details</a>
-             <a class="pr-3" href="#">Blog Details</a>
-             <a class="pr-3" href="#">Pricing</a>
-             <a class="pr-3" href="#">Faq</a>
+             <a class="mr-3" href="#">CLASSES DETAILS</a>
+             <a class="mr-3" href="#">BLOG DETAILS</a>
+             <a class="mr-3" href="#">PRICING</a>
+             <a class="mr-3" href="#">FAQ</a>
          </div>
          </div>
-        <a class="pr-3" href="app/views/blog.html">Blog</a>
-        <a class="pr-3" href="app/views/contact.html">Contact</a>
+        <a class="mr-3" href="app/views/blog.html">BLOG</a>
+        <a class="mr-3" href="app/views/contact.html">CONTACT</a>
     </nav>
+
+    <span>
+        <img class="mr-4" src="assets/images/instagram-16 (1).png" alt="instagram-16">
+        <img class="mr-4" src="assets/images/facebook-3-16 (1).png" alt="facebook-3-16">
+        <img class="mr-4" src="assets/images/twitter-16 (1).png" alt="twitter-16">
+        <img class="mr-4" src="assets/images/youtube-4-16 (1).png" alt="youtube-4-16">
+    </span>
     </div>
     <!--CAROUSEL-->    
     <div id="carouselExampleInterval" class="carousel slide karusele text-white" data-ride="carousel">
