--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 </section>
 <!--FOOTER-->
 <footer>
-    <section class="footer">
+    <section class="footer mt-5">
         <div class="container">
             <div class="d-flex">
                 <div class="col-4">
